# pearl

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  Taskfile.yml  go.mod  go.sum  pyproject.toml  ruff.toml  setup.sh
.github/: CI_SECURITY_TIERS.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: blockchain_ci.yml  integration_tests_ci.yml  miner_ci.yml  miner_gpu_ci.yml  miner_heavy_ci.yml  pearl-desktop-wallet.yml  plonky2_ci.yml  release.yml  remove_safe_label.yml  rust_ci.yml
apps/: .dockerignore  .gitignore  .prettierignore  .prettierrc  README.md  eslint.config.js  package.json  pnpm-lock.yaml  turbo.json
coredns-dnsseed/crawler/: address_book.go  address_book_test.go  callbacks.go  seeder.go  seeder_test.go
coredns-dnsseed/deploy/: Corefile.local  Dockerfile  README.md
coredns-dnsseed/dnsseed/: dnsseed.go  ready.go  setup.go  setup_test.go
dnsseeder/: Dockerfile  README.md  crawler.go  dns.go  doc.go  entrypoint.sh  http.go  main.go  network.go  node.go  seeder.go  seeder_test.go
doc/: pearl-headers-block-sync.md
miner/: README.md  conftest.py
miner/miner-base/: pyproject.toml
miner/miner-base/src/miner_base/: async_loop_manager.py  block_submission.py  commitment_hash.py  gateway_client.py  gpu_matmul_config.py  inner_hash.py  matmul_config.py  matrix_merkle_tree.py  noise_generation.py  noisy_gemm.py  settings.py  structs.py
miner/miner-base/tests/: test_async_loop_manager.py  test_commitment_hash.py  test_matmul_config.py  test_merkle_tree.py  test_noise_generation.py  test_noisy_gemm.py
miner/miner-utils/: pyproject.toml
miner/pearl-gateway/: README.md  pyproject.toml
miner/pearl-gateway/src/pearl_gateway/: cli.py  config.py  pearl_client.py  pearl_gateway.py  proof_generator.py  rpc_types.py  scheduler.py  submission_service.py  work_cache.py
miner/pearl-gateway/src/pearl_gateway/blockchain_utils/: blockchain_utils.py  pearl_block.py  pearl_header.py  zk_certificate.py
miner/pearl-gateway/src/pearl_gateway/comm/: dataclasses.py  json_rpc_client.py  mining_configuration.py
miner/pearl-gateway/src/pearl_gateway/miner_rpc/: schemas.py  server.py
miner/pearl-gateway/tests/: bitcoin_block_100k.json  test_blockchain_utils.py  test_comm_dataclasses.py  test_config.py  test_json_schema.py  test_pearl_gateway.py  test_scheduler.py  test_submission_service.py  test_transaction_merkle_tree.py  test_work_cache.py
miner/pearl-gateway/tests/miner_rpc/: README.md  __init__.py  mock_miner_client.py  test_integration.py  test_performance.py  test_schemas.py  test_server.py
miner/pearl-gemm/: pyproject.toml  setup.py
miner/pearl-gemm/csrc/blake3/: blake3.cu  blake3.cuh  blake3_constants.hpp
miner/pearl-gemm/csrc/gemm/: collective_epilogue.hpp  collective_mainloop.hpp  convert_util.h  denoise_converter.cu  denoise_converter_host.h  denoise_converter_kernel.h  error_check.hpp  heuristics.hpp  host_signal_header.hpp  inner_hash_kernel.cu  inner_hash_kernel.h  kernel_traits.hpp  named_barrier.hpp  noise_generation.cu  noise_generation_host.h  noise_generation_kernel.h  pearl_api_params.h  pearl_gemm_api.cpp  pearl_gemm_constants.hpp  pearl_gemm_decl.h  pearl_gemm_host.h  pearl_gemm_kernel.h  pearl_gemm_launch_template.h  pearl_noisingA_host.h  pearl_noisingA_kernel.h  pearl_noisingB_host.h  pearl_noisingB_kernel.h  pow_utils.hpp  print_matrix.hpp  quantization_util.cuh  quantize_kernel.cu  quantize_kernel.hpp  static_switch.h  tile_scheduler.hpp  utils.h
miner/pearl-gemm/csrc/tensor_hash/: commitment_hash_from_merkle_roots_kernel.hpp  compute_blake_mt_kernel.hpp  merkle_tree_roots_kernel.hpp  merkle_tree_utils.hpp  reduce_roots_kernel.h  tensor_hash.cu  tensor_hash_api.hpp  tensor_hash_constants.cuh  tensor_hash_decl.hpp  tensor_hash_host.hpp
miner/pearl-gemm/src/pearl_gemm/: __init__.py  helpers.py  pearl_gemm_interface.py  test_components.py
miner/pearl-gemm/src/pearl_gemm/testing/: __init__.py  gemm_param.py  gemm_tensor_generator.py  noise_gen_reference.py
miner/pearl-gemm/tests/: test_inner_hash.py  test_noise_gen.py  test_pearl_gemm.py  test_pearl_gemm_helpers.py  test_quantization.py  test_tensor_hash.py
miner/vllm-miner/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
miner/vllm-miner/src/vllm_miner/: __init__.py  callbacks.py  config.py  config.yaml  gemm_operators.py  mining_state.py  quantization_operators.py  register.py  vllm_config.py  vllm_kernels.py  vllm_scheme.py
miner/vllm-miner/tests/: reference_outputs.json  test_block_submission_integration.py  test_pearl_noisy_gemm.py  test_quantization.py  test_reference_vs_kernels.py  test_vanilla_gemm.py  test_vllm_execution.py  test_vllm_interface.py  utils.py
node/: .gitignore  .golangci.yml  Dockerfile  Makefile  README.md  Taskfile.yml  btcd.go  config.go  config_test.go  doc.go  log.go  params.go  rpcadapters.go  rpcserver.go  rpcserver_test.go  rpcserverhelp.go  rpcserverhelp_test.go  rpcwebsocket.go  sample-pearld.conf  server.go  service_windows.go  signal.go  signalsigterm.go
pearl-blake3/: Cargo.toml
proxy/: Caddyfile  Caddyfile.domain.example  Dockerfile  README.md  proxy_test.sh
py-pearl-mining/: Cargo.toml  README.md  pyproject.toml
py-pearl-mining/src/: lib.rs
py-pearl-mining/tests/: test_python_api.py
spv/: Makefile  README.md  bamboozle_unit_test.go  batch_spend_reporter.go  blockmanager.go  blockmanager_test.go  cache_test.go  cacheable_block.go  cacheable_filter.go  log.go  neutrino.go  notifications.go  query.go  query_test.go  rescan.go  rescan_test.go  sync_test.go  utxoscanner.go  utxoscanner_test.go  verification.go  verification_test.go
tools/: go.mod  go.sum
version/: version.go
wallet/: .gitignore  Dockerfile  LICENSE  Makefile  README.md  btcwallet.go  config.go  log.go  params.go  rpcserver.go  sample-oyster.conf  signal.go  signalsigterm.go  walletsetup.go
xmss/: .gitignore  Makefile  xmss.go  xmss.h  xmss_stub.go
zk-pow/: Cargo.toml
(+894 files in other folders)
