[package]
name = "py-pearl-mining"
version = "0.1.0"
edition = "2021"
description = "Unified Python bindings for Pearl mining (blake3 merkle trees + ZK proof)"

[lib]
name = "pearl_mining"
crate-type = ["cdylib"]

[dependencies]
pearl-blake3 = { path = "../pearl-blake3", features = ["serde", "pyo3"] }
zk-pow = { path = "../zk-pow", features = ["pyo3"] }
blake3 = "1.8"
rayon = "1.10"
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py312"] }
lazy_static = "1.5"
env_logger = "0.10.0"

[target.'cfg(unix)'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["disable_initial_exec_tls"] }
