[build-system]
requires = ["maturin>=1.7"]
build-backend = "maturin"

[dependency-groups]
dev = [
  "maturin>=1.7",
  "pytest>=8",
  "pytest-xdist>=3",
]

[project]
name = "py-pearl-mining"
version = "0.1.0"
requires-python = ">=3.12"
description = "Unified Python bindings for Pearl mining"
authors = [
  {name = "Pearl Team"}
]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Rust"
]

[tool.maturin]
module-name = "pearl_mining"
