[project]
name = "pearl-gemm"
version = "0.0.1"
description = "CUDA kernels for Pearl GEMM with noising/denoising and PoW extraction"
readme = "README.md"
authors = [
]
requires-python = ">=3.12"
dependencies = [
    "blake3>=1.0.7",
    "pearl-gemm-build-utils",
    "numpy>=1.24.0",
    "packaging>=21.0",
    "pydantic>=2.12.0,<3.0.0",
    "sortedcontainers>=2.4.0",
    "torch==2.9.1",
    "wheel>=0.38.0",
]


[build-system]
requires = ["setuptools>=61", "torch==2.9.1", "numpy", "ninja", "pydantic", "pearl-gemm-build-utils"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "miner-utils",
    "miner-base",
    "loguru-caplog>=0.2.0",
    "matplotlib>=3.7.2",
    "pandas>=2.1.1",
    "pytest-randomly>=3.16.0",
    "pytest-rerunfailures>=14.0",
    "pytest-xdist>=3.3.1",
    "pytest>=7.0.0",
    "ruff>=0.7.0",
    "tqdm>=4.66.1",
    "vllm>=0.15",
]

