[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "black>=23.0.0",
  "isort>=5.12.0",
  "loguru-caplog>=0.2.0",
  "mypy>=1.0.0",
  "myst-parser>=2.0.0",
  "pre-commit>=3.0.0",
  "pylsp-mypy>=0.7.0",
  "pytest-asyncio>=1.2.0",
  "pytest-cov>=4.0.0",
  "pytest>=8.3.0",
  "python-lsp-ruff>=2.3.0",
  "ruff>=0.13.3",
  "sphinx-rtd-theme>=1.0.0",
  "sphinx>=7.0.0"
]

[project]
name = "vllm-miner"
version = "0.1.0"
description = "A high-performance plugin-based quantized linear kernel for vLLM with NoisyGEMM"
authors = [
  {name = "Pearl Research", email = "research@pearlresearch.ai"}
]
dependencies = [
  "PyYAML>=6.0.1",
  "aiohttp>=3.8.0",
  "compressed-tensors",
  "miner-utils",
  "pearl-gateway",
  "miner-base",
  "pearl-gemm",
  "numpy>=1.20.0",
  "torch==2.9.1",
  "vllm==0.15.1"
]
requires-python = "==3.12.*"
license = {text = "MIT"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.entry-points."vllm.general_plugins"]
register_pearl_mining_plugin = "vllm_miner:register_pearl_miner_layer"


